# mood-lifter-hooks

./: .gitignore  CLAUDE.md  CONTRIBUTING.md  LICENSE  README.md  install.sh  pyproject.toml  requirements-dev.txt  requirements.txt  settings.json.example  uninstall.sh
.cursor/rules/: activate-venv.mdc
commands/: joke.md  jwtext.md
config/: defaults.json
hooks/: notification.py  sessionstart.py  stop.py
lib/: api_integrations.py  config.py  constants.py  external_apis.py  joke_command.py  jw_daily_text.py  jw_text_command.py  message_generator.py  ollama_models.py  rate_limiter.py  stoic_quotes.py
tests/: test_api_integrations.py  test_config.py  test_message_generator.py  test_stoic_quotes.py
