[project]
name = "mood-lifter-hooks"
version = "0.1.0"
description = "Encouraging messages for Claude Code sessions via hooks"
readme = "README.md"
requires-python = ">=3.8"
license = {text = "MIT"}
authors = [
    {name = "Mood Lifter Hooks Contributors"},
]
keywords = ["claude-code", "hooks", "productivity", "encouragement", "developer-tools"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Software Development :: Libraries :: Python Modules",
    "Topic :: Text Processing :: Linguistic",
]

dependencies = [
    # No external dependencies required for basic functionality
    # ollama is called via subprocess
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0.0",
    "black>=23.0.0",
    "ruff>=0.1.0",
]
api = [
    "requests>=2.28.0",  # For future external API integration
    "beautifulsoup4>=4.11.0",  # For future web scraping (JW daily text)
]

[project.urls]
Homepage = "https://github.com/your-org/mood-lifter-hooks"
Repository = "https://github.com/your-org/mood-lifter-hooks"
Issues = "https://github.com/your-org/mood-lifter-hooks/issues"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.uv]
dev-dependencies = [
    "pytest>=7.0.0",
    "black>=23.0.0",
    "ruff>=0.1.0",
]

[tool.black]
line-length = 100
target-version = ['py38', 'py39', 'py310', 'py311', 'py312']

[tool.ruff]
line-length = 100
target-version = "py38"
select = [
    "E",  # pycodestyle errors
    "W",  # pycodestyle warnings
    "F",  # pyflakes
    "I",  # isort
    "B",  # flake8-bugbear
    "UP", # pyupgrade
]
ignore = [
    "E501",  # line too long (handled by black)
]

[tool.ruff.isort]
known-first-party = ["lib", "hooks"]